--- a/style.css
+++ b/style.css
@@ -846,7 +846,29 @@ em {
   text-align: center;
 }
 
-/* line 174, src/style.scss */
+/* line 171, src/style.scss */
+.page-intro-history {
+  padding: 0% 0%;
+  background: url(/wp-content/themes/spokes/images/history-hero.jpg) no-repeat center center;
+  background-size: 120%;
+  max-height: 786px;
+  height: 786px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* line 181, src/style.scss */
+.page-intro-about {
+  padding: 0% 0%;
+  background: url(/wp-content/themes/spokes/images/about-hero.jpg) no-repeat center center;
+  background-size: 120%;
+  max-height: 786px;
+  height: 786px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* line 194, src/style.scss */
 .home-intro {
   max-width: 1080px;
   width: 100%;
@@ -860,7 +882,7 @@ em {
   margin-bottom: 25px;
 }
 
-/* line 187, src/style.scss */
+/* line 207, src/style.scss */
 .history-intro {
   max-width: 1080px;
   width: 100%;
@@ -874,7 +896,7 @@ em {
   margin-bottom: 25px;
 }
 
-/* line 200, src/style.scss */
+/* line 220, src/style.scss */
 .about-intro {
   max-width: 1080px;
   width: 100%;
@@ -888,7 +910,7 @@ em {
   margin-bottom: 25px;
 }
 
-/* line 213, src/style.scss */
+/* line 233, src/style.scss */
 .intro-h2 {
   font: 600 29px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-transform: uppercase;
@@ -899,7 +921,7 @@ em {
   margin-bottom: 65px;
 }
 
-/* line 223, src/style.scss */
+/* line 243, src/style.scss */
 .page-sub-intro {
   background: url(/wp-content/themes/spokes/images/home-sub-intro.png) no-repeat 7% -10%;
   max-height: 525px;
@@ -913,14 +935,14 @@ em {
   clear: both;
 }
 
-/* line 230, src/style.scss */
+/* line 250, src/style.scss */
 .sub-intro-txt-mod {
   max-width: 780px;
   width: 100%;
   float: right;
 }
 
-/* line 236, src/style.scss */
+/* line 256, src/style.scss */
 .sub-intro-txt {
   font: 600 32px/125% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   max-width: 780px;
@@ -929,7 +951,7 @@ em {
   color: #9f916f;
 }
 
-/* line 244, src/style.scss */
+/* line 264, src/style.scss */
 .team-signatures {
   max-width: 750px;
   width: 100%;
@@ -938,7 +960,7 @@ em {
 /* ============================================= */
 /*	Raffle-TZ     						   		 */
 /* ============================================= */
-/* line 257, src/style.scss */
+/* line 277, src/style.scss */
 .raffle-tz {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   height: 515px;
@@ -947,7 +969,7 @@ em {
   border-color: #eee;
 }
 
-/* line 265, src/style.scss */
+/* line 285, src/style.scss */
 .raffle-ticket-mod {
   border: 1px solid;
   border-color: #817351;
@@ -966,13 +988,13 @@ em {
   margin: 0 auto;
   text-align: center;
   background: url(/wp-content/themes/spokes/images/pmc-logo-raffle.png) top right no-repeat, url(/wp-content/themes/spokes/images/bg-raffle.jpg) 50% 50%;
-  background-size: 200px, 50%;
+  background-size: 175px, 50%;
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 }
 
-/* line 286, src/style.scss */
+/* line 306, src/style.scss */
 .raffle-inside {
   padding: 40px;
   border: 3px dashed;
@@ -992,7 +1014,7 @@ em {
   clear: both;
 }
 
-/* line 295, src/style.scss */
+/* line 315, src/style.scss */
 .raffle-hdr {
   background: url(/wp-content/themes/spokes/images/raffle-hdr.png) no-repeat 50% 50%;
   background-size: 100%;
@@ -1000,7 +1022,7 @@ em {
   margin-bottom: 70px;
 }
 
-/* line 302, src/style.scss */
+/* line 322, src/style.scss */
 .raffle-name-mod {
   position: relative;
   border-bottom: 3px solid;
@@ -1008,14 +1030,14 @@ em {
   margin-bottom: 80px;
 }
 
-/* line 309, src/style.scss */
+/* line 329, src/style.scss */
 .raffle-prize-mod {
   position: relative;
   border-bottom: 3px solid;
   border-color: #5d4e2e;
 }
 
-/* line 315, src/style.scss */
+/* line 335, src/style.scss */
 .raffle-name-title, .raffle-prize-title {
   text-align: left;
   font: 600 25px/120% "freight-text-pro";
@@ -1026,7 +1048,7 @@ em {
   bottom: 0px;
 }
 
-/* line 325, src/style.scss */
+/* line 345, src/style.scss */
 .raffle-name, .raffle-prize {
   text-align: left;
   font: 600 35px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -1041,13 +1063,13 @@ em {
 /* ============================================= */
 /*	Blog-Feed    						   		 */
 /* ============================================= */
-/* line 342, src/style.scss */
+/* line 362, src/style.scss */
 .blog-feed {
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 350, src/style.scss */
+/* line 370, src/style.scss */
 .blog-post-tz {
   margin: 0 auto 50px auto;
   border: 1px solid;
@@ -1065,13 +1087,13 @@ em {
   background-repeat: repeat-y;
 }
 
-/* line 367, src/style.scss */
+/* line 387, src/style.scss */
 .post-date-mod {
   width: 131px;
   height: 260px;
 }
 
-/* line 372, src/style.scss */
+/* line 392, src/style.scss */
 .post-date {
   background-color: #9f916f;
   padding: 10px;
@@ -1086,30 +1108,86 @@ em {
 }
 
 /* ============================================= */
+/*	History-Page   						   		 */
+/* ============================================= */
+/* line 412, src/style.scss */
+.history-list-mod {
+  margin: 0 auto;
+  text-align: center;
+  margin-top: -50px;
+}
+
+/* line 418, src/style.scss */
+.history-year {
+  max-width: 850px;
+  width: 100%;
+  max-height: 270px;
+  border: 1px solid;
+  border-color: #eee;
+  border-bottom-color: #ddd;
+  text-align: center;
+  margin: 0 auto 50px auto;
+  background-color: #fff;
+  *zoom: 1;
+  background-image: url(/wp-content/themes/spokes/images/bg-dots-long.png);
+  background-size: 250px;
+  background-repeat: repeat-x;
+  margin-bottom: 50px;
+  text-align: left;
+  padding-bottom: 16px;
+}
+/* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.history-year:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* line 437, src/style.scss */
+.year-tz-img {
+  max-width: 380px;
+  width: 100%;
+  float: left;
+  margin-top: -1px;
+  margin-left: -1px;
+}
+
+/* line 445, src/style.scss */
+.year-tz-txt-mod {
+  padding: 27px 20px 30px 420px;
+  text-align: left;
+}
+/* line 449, src/style.scss */
+.year-tz-txt-mod .tz-h1 {
+  color: #9f916f;
+  margin-bottom: 15px;
+}
+
+/* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 392, src/style.scss */
+/* line 462, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 398, src/style.scss */
+/* line 468, src/style.scss */
 .ftr-logo {
   max-width: 515px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 404, src/style.scss */
+/* line 474, src/style.scss */
 .sponsors {
   height: 515px;
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 410, src/style.scss */
+/* line 480, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -1135,13 +1213,13 @@ footer {
   float: right;
   margin-right: 0;
 }
-/* line 415, src/style.scss */
+/* line 485, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 421, src/style.scss */
+/* line 491, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 3;
   -moz-columns: 3;
@@ -1149,13 +1227,13 @@ footer {
   -o-columns: 3;
   columns: 3;
 }
-/* line 425, src/style.scss */
+/* line 495, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 431, src/style.scss */
+/* line 501, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -1163,12 +1241,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 438, src/style.scss */
+/* line 508, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 443, src/style.scss */
+/* line 513, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -1177,24 +1255,25 @@ footer {
   margin-bottom: 25px;
 }
 
-/* line 451, src/style.scss */
+/* line 521, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
   font: 400 14px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-transform: uppercase;
   padding: 16px 25px 20px 25px;
+  letter-spacing: 1px;
 }
 
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 465, src/style.scss */
+/* line 536, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 469, src/style.scss */
+/* line 540, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -1204,7 +1283,7 @@ footer {
   width: 50%;
   top: 80%;
   max-width: 300px;
-  background: #777;
+  background: #fff;
   -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
@@ -1215,8 +1294,45 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 483, src/style.scss */
+/* line 554, src/style.scss */
 .card-effect:after {
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  transform: rotate(3deg);
+  right: 10px;
+  left: auto;
+}
+
+/* line 560, src/style.scss */
+.card-effect-lg {
+  position: relative;
+}
+
+/* line 564, src/style.scss */
+.card-effect-lg:before, .card-effect-lg:after {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 10px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width: 300px;
+  background: #fff;
+  -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+}
+
+/* line 578, src/style.scss */
+.card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
   -ms-transform: rotate(3deg);
