--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -2,11 +2,70 @@
 
 {% block content %}
 
-	<section class="page-intro">
+	<section class="page-intro-history">
 			<h1 class="intro-h1 history-intro">History</h1>
 			<h2 class="intro-h2">We've logged thousands of miles in the fight against cancer</h2>
 			<a class="btn btn-donate">Donate Today</a>
 	</section><!-- /page-intro -->	
+
+	<section class="history-list-mod">
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2012</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2011</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->	
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2010</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2009</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2008</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2007</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->
+
+		<article class="history-year card-effect-lg">
+			<img class="year-tz-img" src="/wp-content/themes/spokes/images/history-tz-2012.jpg">
+			<div class="year-tz-txt-mod">
+				<h5 class="tz-h1">2006</h5>
+				<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket.</p>
+			</div><!-- /year-tz-txt-mod -->	
+		</article><!-- /history-year -->								
+
+	</section><!-- /history-list-mod -->	
 	
 	{% for child in post.get_children %}
 		{{child.title}}
