--- a/views/home.twig
+++ b/views/home.twig
@@ -8,9 +8,9 @@
 			<a class="btn btn-large btn-donate">Donate Today</a>
 		</section><!-- /page-intro -->	
 
-		<section class="page-sub-intro">
+		<section class="page-sub-intro-home">
 			<div class="page-mod">
-				<div class="sub-intro-txt-mod">
+				<div class="sub-intro-txt-mod-home">
 				<h3 class="sub-intro-txt">We love bikes. We hate cancer.
 				Bikes Fight Cancer is a tight-knit team of knuckleheads that ride bikes and are committed to raising money for life-saving cancer research and treatment.</h3>
 				<img class="team-signatures" src="/wp-content/themes/spokes/images/team-signatures.png">
