--- a/views/page-about.twig
+++ b/views/page-about.twig
@@ -8,11 +8,74 @@
 			<a class="btn btn-donate">Donate Today</a>
 	</section><!-- /page-intro -->
 
+	<section class="page-sub-intro">
+		<div class="page-mod">
+			<div class="sub-intro-txt-mod">
+			<h3 class="sub-intro-txt">What began in 2006, when Jon Jasak, Johnny Morin, and Mike Swiatlowski decided to test their mettle in the Pan-Mass Challenge as Team Palmer Pedal Power, has now turned into a well-oiled, money-raising, cancer-fighting machine!</h3>
+			</div><!-- /sub-intro-txt-mod -->
+		</div><!-- /page-mod -->	
+	</section><!-- /page-sub-intro -->
+
+	<section class="team-profiles">
+		<div class="page-mod">
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->
+				<p><strong>Jon Jasak</strong> – In 2001, I was diagnosed with Neuro-Blastoma. I am now in my 12th year of remission and will celebrate in the Pan-Mass Challenge.</p>
+			</div><!-- /team-member -->
+
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->
+				<p><strong>Johnny Morin</strong> – Eleven years ago, my father was diagnosed with cancer. He had a long, hard battle with the disease before passing away in July of 2005. I ride for my father.</p>
+			</div><!-- /team-member -->
+
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->
+				<p><strong>Mike Swiatlowski</strong> – Listening to a friend explain that he has an unexplainable cancer was one of the most shocking moments in my life. I promised all of my help and support.</p>
+			</div><!-- /team-member -->
+
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->
+				<p><strong>Ryan O’Connor</strong> – Sadly, two of my uncles have passed away as a result of cancer and it has been very difficult. I am riding for my family.</p>
+			</div><!-- /team-member -->
+
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->				
+				<p><strong>Bob Zemba</strong> – My father refuses to let cancer define his life. Eight years after he was given two years to live, he’s winning the battle despite the odds. I ride to celebrate his life.</p>
+			</div><!-- /team-member -->
+
+			<div class="team-member media-block">
+				<div class="rider-img-mod">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+				</div><!-- /rider-img-mod -->				
+				<p><strong>James Sutter</strong> – In addition to my grandparents and my uncle, my father-in-law died from cancer. I am riding for the bride who never got to be walked down the aisle by her father.</p>
+			</div><!-- /team-member -->
+		</div><!-- /page-mod -->			
+	</section><!-- /team-profiles -->	
+
+	<section class="page-sub-txt">
+		<div class="page-mod">
+			<div class="sub-txt-mod">
+				<h4 class="section-h1">Bikes Fight Cancer and The PMC</h4>
+				<p class="sub-txt">On August 3rd and 4th of this year, we will be participating in the 34th Pan-Mass Challenge as Team BIKES FIGHT CANCER. Along with 5,000 other cyclists, the PMC aims to raise $38,000,000 (yes, that’s 38-million dollars) for the Dana-Farber Cancer Institute through its Jimmy Fund.The Pan-Mass Challenge is the nation’s original fundraising bike-a-thon and today raises more money than any other athletic charity event in the country. Since it’s inception, the PMC generates 52% of the Jimmy Fund’s annual revenue and has raised over $375,000,000 for cancer research and patient care at Dana-Farber. For more about the great PMC click here.</p>
+			</div><!-- /sub-txt-mod -->
+		</div><!-- /page-mod -->	
+	</section><!-- /page-sub-txt -->
+
 	<!-- this loops gets the team members -->
-	{% for person in post.team %}
+	<!-- {% for person in post.team %}
 		{{person.name}}
 		<img src="{{person.image.url}}"/>
 		{{person.bio}}
-	{% endfor %}
+	{% endfor %} -->
 
 {% endblock %}
