--- a/views/sponsors.twig
+++ b/views/sponsors.twig
@@ -10,7 +10,7 @@
 				<h4 class="section-h1">Our Business Sponsors</h4>
 
 				<ul class="sponsors-list-mod">
-					{% for sponsor in sponsors.sponsors %}
+					{% for sponsor in footer.sponsors %}
 						<li class="sponsor-list-item">
 							{% if sponsor.sponsor_link %}<a href="{{sponsor.sponsor_link}}">{% endif %}
 							{{sponsor.sponsor_name}}
