INK hooking the footer up to WP.

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -3,11 +3,9 @@
 <footer id="footer">
 	<div class="page-mod">
 		<img class="ftr-logo" src="/wp-content/themes/spokes/images/ftr-logo.png"/>
-		<ul class="contact-ul">
-			<li class="contact-li-item">We’d love to hear from you!</li>
-			<li class="contact-li-item">413-813-9215</li>			
-			<li class="contact-li-item">team@bikesfightcancer.org</li>
-		</ul>		
+
+		{{ footer.footer.post_content }}
+
 	</div><!-- /page-mod -->
 	<div class="site-credit">
 		Site by Upstatement
